2008-05-24  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (directory_delete_recursive): also delete the
	directory itself

2008-05-24  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (cleanup_tmp_dir): fix up last commit

2008-05-24  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Lincoln de Sousa <lincoln@minaslivre.org>

	Port the last remaining bits of gnome-vfs to gio (bug
	#524401).

	* appearance-main.c: (init_appearance_data):
	* theme-installer.c: (cleanup_tmp_dir), (file_theme_type),
	(transfer_cancel_cb), (gnome_theme_install_real),
	(transfer_done_cb): use gio instead of gnome-vfs

	* theme-util.c:
	* theme-util.h: make file_delete_recursive public

	* gnome-wp-info.c: include string.h to avoid warning

==================== 2.23.2 ====================

2008-05-08  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (style_message_area_response_cb),
	(update_message_area), (gtk_theme_changed), (style_init):
	* appearance.h:
	* data/appearance.glade: also show a missing theme engine in the
	GTK themes list and offer to install it via packagekit

2008-05-07  Jens Granseuer  <jensgr@gmx.net>

	Add support for installing missing GTK+ theme engines via
	packagekit (bug #511065)

	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update): when we detect a missing engine,
	check if packagekit is available on the session bus. If it is show
	an install button to pull the corresponding package
	* appearance.h:
	* theme-util.c: (packagekit_available), (theme_install_file):
	* theme-util.h: add support functions

2008-05-07  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Lincoln de Sousa <lincoln@minaslivre.org>

	* theme-save.c: (setup_directory_structure), (write_theme_to_disk):
	replace some more gnome-vfs by gio (part of bug #524401)

2008-05-06  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-themes.c: (theme_message_area_update): move metatheme
	validation code to common/gnome-theme-info.c
