@@ -1,5 +1,10 @@
 2008-05-24  Jens Granseuer  <jensgr@gmx.net>
 
+	* theme-util.c: (theme_is_writable), (theme_delete): expect
+	a path instead of an URI in theme_info->path
+
+2008-05-24  Jens Granseuer  <jensgr@gmx.net>
+
 	* theme-util.c: (directory_delete_recursive): also delete the
 	directory itself
 
